discussion/kv_engine/125919/125919_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Change compaction to use the PiTR configuration

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-20 07:06:54.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 07:28:43.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27606/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1089): error C2660: "cb::couchstore::compact": function does not take 8 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27606/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1780/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1098:17: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
                oldest.time_since_epoch().count(),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1780/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1098:17:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1780/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23607/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1098:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3210/ : FAILURE

Compile error at [2020-04-20T07:09:36.543Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1099:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3194/ : FAILURE

Compile error at [2020-04-20T07:08:43.087Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1099:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3194/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3272/ : FAILURE

Compile error at [2020-04-20T07:24:31.010Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1099:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3272/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2255/ : FAILURE

Compile error at [2020-04-20T07:08:41.752Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1098:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2255/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11063/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/299/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
